css/style.css
/* Custom Stylesheet */
/**
 * Use this file to override Materialize files so you can update
 * the core Materialize files in the future
 *
 * Made By MaterializeCSS.com
 */
 
 html, body {
    max-width: 100%;
    overflow-x: hidden;
}

ul:not(.browser-default) > li {
     list-style-type: disc; 
}

nav ul a,
nav .brand-logo {
  color: black;
  width: 100000px;
  height 100000px;
}

p {
  line-height: 2rem;
}

.sidenav-trigger {
  color: #26a69a;
}

#title {
	font-weight: bold;
}

.img-icon{
	display: block;
	margin-left: auto;
	margin-right: auto;
}

#logo{
	width: 65px;
	margin-left: 10px;
}

.logo-text{
	height: 10px;
}

hr {
	width: 1100px;
    margin-left: 0px;
	margin-top: 60px;
}

#umg-text{
	margin-top: 0px;
}

#fort-text{
	margin-top: 95px;
}

#umg-img{
	height: 140px;
}

#fort-img{
	height: 94px;
	margin-top: 24px;
}

#forrest1{
	bottom: 104px;
}

.git{
	font-size: xx-large;
}

.bullet{
	font-size: 16px;
}

 #type{
	color: white;
 }
 
 .typed-cursor{
	 color: white;
 }
.parallax-container {
    height: 600px !important;
    z-index: -1;
}

.parallax img {
    max-width: 102%;
    max-height: auto;
    bottom: -20%;
    /* right: 00px !important; */
    height: auto;
    min-width: 1000px !important;
    min-height: 100%;
    -webkit-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
    -webkit-transform: translateX(-50%);
    transform: translateX(-50%);
}

  .parallax-container .section {
    width: 100%;
  }

@media only screen and (max-width : 992px) {
  .parallax-container .section {
    position: absolute;
    top: 40%;
  }
  #index-banner .section {
    top: 10%;
  }
}

@media only screen and (max-width : 600px) {
  #index-banner .section {
    top: 0;
  }
}

.icon-block {
  padding: 0 15px;
}
.icon-block .material-icons {
  font-size: inherit;
}

footer.page-footer {
  margin: 0;
}

